feat: add endpoint get-stacking-reward, fixes #23
